Make close button and to not scroll

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -21,9 +21,10 @@
 <meta name="twitter:url" content="" />
 <meta name="twitter:description" content="アバウトページのdescription" />
 <meta name="twitter:image" content="" /><!--絶対パスで記述-->
+<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundleb0108c672b33d4b72e69.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundleb52e56b1931d33d55d6a.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -34,6 +35,17 @@
 </h1>
 <a href="/">to top</a>
 
+
+
+<footer class="l-footer">
+  <img src="/assets/images/trust.png" class="c-footer-logo" alt="フッターのロゴ画像">
+  <small class="c-footer-copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
+  <div class="c-footer-link">
+    <a class="c-footer-link__twitter" href="#">twitterリンク</a>
+    <a class="c-footer-link__corporate" href="#">コーポレートサイト</a>
+  </div>
+</footer>
+
 </div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundleb0108c672b33d4b72e69.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundleb52e56b1931d33d55d6a.js"></script></body>
 </html>
