--- a/public/about/index.html
+++ b/public/about/index.html
@@ -22,9 +22,10 @@
 <meta name="twitter:description" content="アバウトページのdescription" />
 <meta name="twitter:image" content="" /><!--絶対パスで記述-->
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet"> <!-- font -->
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundle59be50e22fb08aa55940.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundle6af53a8230e4f5f1c5bd.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -38,14 +39,15 @@
 
 
 <footer class="l-footer">
-  <img src="/assets/images/trust.png" class="c-footer-logo" alt="フッターのロゴ画像">
-  <small class="c-footer-copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
+  <div class="c-footer-company">
+    <img src="/assets/images/trust.png" class="c-footer-company__logo" alt="フッターのロゴ画像">
+    <small class="c-footer-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
+  </div>
   <div class="c-footer-link">
-    <a class="c-footer-link__twitter" href="#">twitterリンク</a>
     <a class="c-footer-link__corporate" href="#">コーポレートサイト</a>
   </div>
 </footer>
 
 </div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundle59be50e22fb08aa55940.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundle6af53a8230e4f5f1c5bd.js"></script></body>
 </html>
