Modified line btn, aboutService block text position and  footer logo

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -25,7 +25,7 @@
 <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet"> <!-- font -->
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundleccf3d74a30d63b3351a3.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundle6587e19944995062f229.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -38,16 +38,27 @@
 
 
 
-<footer class="l-footer">
-  <div class="c-footer-company">
-    <img src="/assets/images/trust.png" class="c-footer-company__logo" alt="フッターのロゴ画像">
-    <small class="c-footer-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
+<footer class="l-footerPC" id="footer">
+  <div class="c-footerPC-company">
+    <img src="/assets/images/trust.png" class="c-footerPC-company__logo" alt="フッターのロゴ画像">
+    <small class="c-footerPC-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
   </div>
-  <div class="c-footer-link">
-    <a class="c-footer-link__corporate" href="#">コーポレートサイト</a>
+  <div class="c-footerPC-corporate">
+    <a class="c-footerPC-corporate__link" href="#">
+      <img src="/assets/images/ttj.banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+    </a>
   </div>
 </footer>
 
+<footer  class="l-footerSP" id="footer">
+  <p class="c-footerSP-text">↓詳しい弊社概要は下記をクリック↓</p>
+  <a class="c-footerSP-corporate__link" href="#">
+    <img src="/assets/images/ttj.banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+  </a>
+  <img src="/assets/images/trust.png" class="c-footerSP-company__logo" alt="フッターのロゴ画像">
+  <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
+</footer>
+
 </div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundleccf3d74a30d63b3351a3.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundle6587e19944995062f229.js"></script></body>
 </html>
