Modified btn position, text size of aboutService block and to add line url

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -23,9 +23,11 @@
 <meta name="twitter:image" content="" /><!--絶対パスで記述-->
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet"> <!-- font -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundle6587e19944995062f229.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundlede201410a349265bdb93.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -60,5 +62,5 @@
 </footer>
 
 </div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundle6587e19944995062f229.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundlede201410a349265bdb93.js"></script></body>
 </html>
