--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,7 +27,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundlede201410a349265bdb93.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundle456aefe0e19762346d3b.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -46,7 +46,7 @@
     <small class="c-footerPC-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
   </div>
   <div class="c-footerPC-corporate">
-    <a class="c-footerPC-corporate__link" href="#">
+    <a class="c-footerPC-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
       <img src="/assets/images/ttj.banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
     </a>
   </div>
@@ -54,7 +54,7 @@
 
 <footer  class="l-footerSP" id="footer">
   <p class="c-footerSP-text">↓詳しい弊社概要は下記をクリック↓</p>
-  <a class="c-footerSP-corporate__link" href="#">
+  <a class="c-footerSP-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
     <img src="/assets/images/ttj.banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
   </a>
   <img src="/assets/images/trust.png" class="c-footerSP-company__logo" alt="フッターのロゴ画像">
@@ -62,5 +62,5 @@
 </footer>
 
 </div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundlede201410a349265bdb93.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundle456aefe0e19762346d3b.js"></script></body>
 </html>
