--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,7 +27,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundle456aefe0e19762346d3b.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundle820c02b101f65bbb89a7.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -53,7 +53,7 @@
 </footer>
 
 <footer  class="l-footerSP" id="footer">
-  <p class="c-footerSP-text">↓詳しい弊社概要は下記をクリック↓</p>
+  <p class="c-footerSP-text">↓弊社概要は下記をクリック↓</p>
   <a class="c-footerSP-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
     <img src="/assets/images/ttj.banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
   </a>
@@ -62,5 +62,5 @@
 </footer>
 
 </div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundle456aefe0e19762346d3b.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundle820c02b101f65bbb89a7.js"></script></body>
 </html>
