--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,7 +27,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundle820c02b101f65bbb89a7.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundleebd6b035cbdd60837108.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -42,12 +42,13 @@
 
 <footer class="l-footerPC" id="footer">
   <div class="c-footerPC-company">
-    <img src="/assets/images/trust.png" class="c-footerPC-company__logo" alt="フッターのロゴ画像">
+    <img src="/assets/images/trust.png" class="c-footerPC-company__logo" alt="サービス名のロゴ画像">
     <small class="c-footerPC-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
   </div>
   <div class="c-footerPC-corporate">
     <a class="c-footerPC-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
       <img src="/assets/images/ttj.banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+      <p class="c-footerPC-corporate__linkText">トラストコーポレーション</p>
     </a>
   </div>
 </footer>
@@ -62,5 +63,5 @@
 </footer>
 
 </div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundle820c02b101f65bbb89a7.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundleebd6b035cbdd60837108.js"></script></body>
 </html>
