Modified error code of enter block

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,7 +27,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundleebd6b035cbdd60837108.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundle1fd6f498bf3a2b00d048.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -42,12 +42,12 @@
 
 <footer class="l-footerPC" id="footer">
   <div class="c-footerPC-company">
-    <img src="/assets/images/trust.png" class="c-footerPC-company__logo" alt="サービス名のロゴ画像">
+    <img src="/assets/images/logo_ttj.png" class="c-footerPC-company__logo" alt="サービス名のロゴ画像">
     <small class="c-footerPC-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
   </div>
   <div class="c-footerPC-corporate">
     <a class="c-footerPC-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
-      <img src="/assets/images/ttj.banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+      <img src="/assets/images/img_ttj_banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
       <p class="c-footerPC-corporate__linkText">トラストコーポレーション</p>
     </a>
   </div>
@@ -56,12 +56,12 @@
 <footer  class="l-footerSP" id="footer">
   <p class="c-footerSP-text">↓弊社概要は下記をクリック↓</p>
   <a class="c-footerSP-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
-    <img src="/assets/images/ttj.banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+    <img src="/assets/images/img_ttj_banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
   </a>
-  <img src="/assets/images/trust.png" class="c-footerSP-company__logo" alt="フッターのロゴ画像">
+  <img src="/assets/images/logo_ttj.png" class="c-footerSP-company__logo" alt="フッターのロゴ画像">
   <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
 </footer>
 
 </div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundleebd6b035cbdd60837108.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundle1fd6f498bf3a2b00d048.js"></script></body>
 </html>
