Modified text white-space

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,7 +27,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundle1fd6f498bf3a2b00d048.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundlea0b312f129920194349f.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -42,7 +42,7 @@
 
 <footer class="l-footerPC" id="footer">
   <div class="c-footerPC-company">
-    <img src="/assets/images/logo_ttj.png" class="c-footerPC-company__logo" alt="サービス名のロゴ画像">
+    <img src="/assets/images/logo_tc.png" class="c-footerPC-company__logo" alt="サービス名のロゴ画像">
     <small class="c-footerPC-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
   </div>
   <div class="c-footerPC-corporate">
@@ -63,5 +63,5 @@
 </footer>
 
 </div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundle1fd6f498bf3a2b00d048.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundlea0b312f129920194349f.js"></script></body>
 </html>
