--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>TTL_JP_TOP</title>
-<link href="assets/stylesheets/bundlea0b312f129920194349f.css" rel="stylesheet"></head>
+<link href="assets/stylesheets/bundle0bf44e91e22399a0ecb4.css" rel="stylesheet"></head>
 <body>
 <div class="l-wrap">
 
@@ -36,7 +36,7 @@
 
 
 <main class="l-main">
-    <div class="p-top-fixed" id="fixed">
+    <div class="p-top-fixed fixed" id="fixed">
       <div class="p-top-fixed__container" id="fluffy_disappear">
         <div class="p-top-fixed__circle--LINE">
           <h3 class="p-top-fixed__catchPhrase"><span class="p-top-fixed__catchPhrase--bold">LINE</span>で<br>簡単登録</h3>
@@ -432,7 +432,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q1</span>
-              <h3 class="p-top-faqPC__answerList__question">フリーランスエージェントとはどういうサービスですか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">フリーランスエージェントとはどういうサービスですか？</h3>
               <span class="p-top-faqPC__answerList__Num">A1</span>
               <p class="p-top-faqPC__answerList__answer">フリーランスエンジニアへ案件をご紹介し、契約手続きや条件の交渉等行うサービスです。わかりやすく言うとエンジニアの営業代行業務になります。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -444,7 +444,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q2</span>
-              <h3 class="p-top-faqPC__answerList__question">TTJのサービス利用料金は発生しますか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">TTJのサービス利用料金は発生しますか？</h3>
               <span class="p-top-faqPC__answerList__Num">A2</span>
               <p class="p-top-faqPC__answerList__answer">いいえ、ご利用料金は完全無料となります。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -456,9 +456,9 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q3</span>
-              <h3 class="p-top-faqPC__answerList__question">自分のスキルに見合った案件へ就けますか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">自分のスキルに見合った案件へ就けますか？</h3>
               <span class="p-top-faqPC__answerList__Num">A3</span>
-              <p class="p-top-faqPC__answerList__answer">はい、LINEにて登録後、弊社営業担当より細かなヒアリングを行いしっかりニーズにマッチした案件をご紹介いたします。</p>
+              <p class="p-top-faqPC__answerList__answer">はい。LINEにて登録後、弊社営業担当より細かなヒアリングを行いしっかりニーズにマッチした案件をご紹介いたします。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
             </div>
           </div>
@@ -468,9 +468,9 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q4</span>
-              <h3 class="p-top-faqPC__answerList__question">実務未経験ですが案件紹介は可能でしょうか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">実務未経験ですが案件紹介は可能でしょうか？</h3>
               <span class="p-top-faqPC__answerList__Num">A4</span>
-              <p class="p-top-faqPC__answerList__answer">はい、未経験でも案件紹介は可能ですが経験者の方に比べ案件の幅には制限がございます。</p>
+              <p class="p-top-faqPC__answerList__answer">はい。未経験でも案件紹介は可能ですが経験者の方に比べ案件の幅には制限がございます。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
             </div>
           </div>
@@ -480,7 +480,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q5</span>
-              <h3 class="p-top-faqPC__answerList__question">TTJのマージン率はどのぐらいですか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">TTJのマージン率はどのぐらいですか？</h3>
               <span class="p-top-faqPC__answerList__Num">A5</span>
               <p class="p-top-faqPC__answerList__answer">案件の単価にもよりますが15%〜20%ほどです。ちなみに業界の相場としては20%〜25%ほどが一般的です。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -492,7 +492,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q6</span>
-              <h3 class="p-top-faqPC__answerList__question">フリーランスとして初めての案件となりますがTTJでどこまでサポートしてくれますか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">フリーランスとして初めての案件となりますがTTJでどこまでサポートしてくれますか？</h3>
               <span class="p-top-faqPC__answerList__Num">A6</span>
               <p class="p-top-faqPC__answerList__answer">案件の提案から業務開始まではもちろん、クライアント様との商談の仕方等ノウハウも含めサポート致します。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -504,7 +504,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q7</span>
-              <h3 class="p-top-faqPC__answerList__question">TTJでは現案件から次回案件へ移行の際、期間を開けず就業することは可能でしょうか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">TTJでは現案件から次回案件へ移行の際、期間を開けず就業することは可能でしょうか？</h3>
               <span class="p-top-faqPC__answerList__Num">A7</span>
               <p class="p-top-faqPC__answerList__answer">はい、可能です。TTJではエンジニア1人1人に担当がつきますので案件終了期間が近づきましたら担当より次回案件についてご相談致します。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -516,7 +516,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q8</span>
-              <h3 class="p-top-faqPC__answerList__question">案件の期間はどのぐらいでしょうか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">案件の期間はどのぐらいでしょうか？</h3>
               <span class="p-top-faqPC__answerList__Num">A8</span>
               <p class="p-top-faqPC__answerList__answer">案件ごとに変わりますが1〜3ヶ月での更新が一般的となります。エンジニア、クライアント様より双方認識（ニーズ）が合えば延長することも可能です。ちなみに弊社の案件更新率は90%以上となります。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -528,7 +528,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q9</span>
-              <h3 class="p-top-faqPC__answerList__question">案件先は東京のみでしょうか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">案件先は東京のみでしょうか？</h3>
               <span class="p-top-faqPC__answerList__Num">A9</span>
               <p class="p-top-faqPC__answerList__answer">いいえ、やはり東京23区内が多いのは事実ですが、TTJでは全国にクライアント様がおりますので地方案件も多数ございます。まずはお気軽にお問い合わせください。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -540,7 +540,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q10</span>
-              <h3 class="p-top-faqPC__answerList__question">フルタイム以外の案件もありますか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">フルタイム以外の案件もありますか？</h3>
               <span class="p-top-faqPC__answerList__Num">A10</span>
               <p class="p-top-faqPC__answerList__answer">当社では一般的な140h〜180h時間稼働の案件だけではなく、週2、3日の案件もご紹介致します。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -552,7 +552,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q11</span>
-              <h3 class="p-top-faqPC__answerList__question">他のエージェントでは常駐案件が多いと聞きましたがTTJも同じでしょうか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">他のエージェントでは常駐案件が多いと聞きましたがTTJも同じでしょうか？</h3>
               <span class="p-top-faqPC__answerList__Num">A11</span>
               <p class="p-top-faqPC__answerList__answer">やはり割合として常駐案件が多いですがコロナ禍の影響もありリモートワーク案件も急増しております。まずは一度お気軽にご相談下さい。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -564,7 +564,7 @@
           <div id="bgBlack">
             <div class="p-top-faqPC__answerList__textBlock">
               <span class="p-top-faqPC__answerList__Num">Q12</span>
-              <h3 class="p-top-faqPC__answerList__question">登録にするにあたり、何か用意するものなどありますでしょうか？-</h3>
+              <h3 class="p-top-faqPC__answerList__question">登録にするにあたり、何か用意するものなどありますでしょうか？</h3>
               <span class="p-top-faqPC__answerList__Num">A12</span>
               <p class="p-top-faqPC__answerList__answer">登録の際には特にございません。弊社担当との打ち合わせの際にはスキルシート、職務経歴書をご用意いただけるとご案内がスムーズです。もしお持ちでない場合は、テンプレートをご用意致しますのでお申し付けください。</p>
               <span class="p-top-faqPC__crossIcon"><i class="fas fa-times crossIcon"></i></span>
@@ -599,7 +599,7 @@
             <h3 class="p-top-faqSP__question__title" id="questionTitle3">Q.自分のスキルに見合った案件へ就けますか？</h3>
           </div>
           <div class="p-top-faqSP__answer">
-            <p class="p-top-faqSP__answer__text">A.はい、LINEにて登録後、弊社営業担当より細かなヒアリングを行いしっかりニーズにマッチした案件をご紹介いたします。</p>
+            <p class="p-top-faqSP__answer__text">A.はい。LINEにて登録後、弊社営業担当より細かなヒアリングを行いしっかりニーズにマッチした案件をご紹介いたします。</p>
           </div>
         </li>
       
@@ -608,7 +608,7 @@
             <h3 class="p-top-faqSP__question__title" id="questionTitle4">Q.実務未経験ですが案件紹介は可能でしょうか？</h3>
           </div>
           <div class="p-top-faqSP__answer">
-            <p class="p-top-faqSP__answer__text">A.はい、未経験でも案件紹介は可能ですが経験者の方に比べ案件の幅には制限がございます。</p>
+            <p class="p-top-faqSP__answer__text">A.はい。未経験でも案件紹介は可能ですが経験者の方に比べ案件の幅には制限がございます。</p>
           </div>
         </li>
       
@@ -733,5 +733,5 @@
 </footer>
 
 </div><!-- l-wrap -->
-<script type="text/javascript" src="assets/javascripts/bundlea0b312f129920194349f.js"></script></body>
+<script type="text/javascript" src="assets/javascripts/bundle0bf44e91e22399a0ecb4.js"></script></body>
 </html>
