--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,10 +27,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundle964bc22015efae954863.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundlef0b46f07c5fc15d4c906.css" rel="stylesheet"></head>
 <body>
-<div class="l-wrap">
-
+<!--<div id="bgBlack"></div>-->
 
 <!-- prettier-ignore -->
 <h1>
@@ -62,6 +61,5 @@
   <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
 </footer>
 
-</div><!-- l-wrap -->
-<script type="text/javascript" src="../assets/javascripts/bundle964bc22015efae954863.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundlef0b46f07c5fc15d4c906.js"></script></body>
 </html>
