--- a/public/index.html
+++ b/public/index.html
@@ -27,17 +27,16 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>TTL_JP_TOP</title>
-<link href="assets/stylesheets/bundle964bc22015efae954863.css" rel="stylesheet"></head>
+<link href="assets/stylesheets/bundle65e48a42f1649cb4e88c.css" rel="stylesheet"></head>
 <body>
-<div class="l-wrap">
-
+<!--<div id="bgBlack"></div>-->
 
 
 
 
 <main class="l-main">
     <div class="p-top-fixed fixed" id="fixed">
-      <div class="p-top-fixed__container" id="fluffy_disappear">
+      <div class="p-top-fixed__container" id="fluffyDisappear">
         <div class="p-top-fixed__circle--LINE">
           <h3 class="p-top-fixed__catchPhrase"><span class="p-top-fixed__catchPhrase--bold">LINE</span>で<br>簡単登録</h3>
         </div><!-- /.p-top-fixed__circle -->
@@ -773,6 +772,5 @@
   <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
 </footer>
 
-</div><!-- l-wrap -->
-<script type="text/javascript" src="assets/javascripts/bundle964bc22015efae954863.js"></script></body>
+<script type="text/javascript" src="assets/javascripts/bundle65e48a42f1649cb4e88c.js"></script></body>
 </html>
