Modified graph z-index

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,9 +27,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundle768d236d9df8b062dc78.css" rel="stylesheet"></head>
-<body>
-<!--<div id="bgBlack"></div>-->
+<link href="../assets/stylesheets/bundlef3bac1bc635546d8752e.css" rel="stylesheet"></head>
+<body ontouchstart="">
 
 <!-- prettier-ignore -->
 <h1>
@@ -61,5 +60,5 @@
   <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
 </footer>
 
-<script type="text/javascript" src="../assets/javascripts/bundle768d236d9df8b062dc78.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundlef3bac1bc635546d8752e.js"></script></body>
 </html>
