Modified footer to add contact form link

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,7 +27,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
 <title>ABOUT</title>
-<link href="../assets/stylesheets/bundlef3bac1bc635546d8752e.css" rel="stylesheet"></head>
+<link href="../assets/stylesheets/bundle5b0d9b4ad18cba15a5bd.css" rel="stylesheet"></head>
 <body ontouchstart="">
 
 <!-- prettier-ignore -->
@@ -45,20 +45,30 @@
   </div>
   <div class="c-footerPC-corporate">
     <a class="c-footerPC-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
-      <img src="/assets/images/img_ttj_banner.png" class="c-footerPC-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
-      <p class="c-footerPC-corporate__linkText">トラストコーポレーション</p>
+      <img src="/assets/images/img_ttj_banner.png" alt="footerのコーポレートサイトのイメージ">
+      <p class="c-footerPC-corporate__text">トラストコーポレーション</p>
     </a>
+    <div>
+    <a class="c-footerPC-corporate__contactLink" href="https://trust-c-osaka.com/contact/" target="_blank" rel="noopener noreferrer">
+      <i class="fas fa-directions c-footerfooterPC-corporate__contactIcon"></i>
+    </a>
+      <p class="c-footerPC-corporate__contactText">お問い合わせ</p>
+      </div>
   </div>
 </footer>
 
 <footer  class="l-footerSP" id="footer">
-  <p class="c-footerSP-text">↓弊社概要は下記をクリック↓</p>
+  <p class="c-footerSP-corporate__text">↓弊社概要は下記をクリック↓</p>
   <a class="c-footerSP-corporate__link" href="https://trust-c-osaka.com/" target="_blank" rel="noopener noreferrer">
     <img src="/assets/images/img_ttj_banner.png" class="c-footerSP-corporate__linkImg" alt="footerのコーポレートサイトのイメージ">
+  </a>
+  <p class="c-footerSP-contact__text">↓お問い合わせ↓</p>
+  <a class="c-footerSP-contact__link" href="https://trust-c-osaka.com/contact/" target="_blank" rel="noopener noreferrer">
+    <i class="fas fa-directions c-footerSP-contact__linkIcon"></i>
   </a>
   <img src="/assets/images/logo_ttj.png" class="c-footerSP-company__logo" alt="フッターのロゴ画像">
   <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
 </footer>
 
-<script type="text/javascript" src="../assets/javascripts/bundlef3bac1bc635546d8752e.js"></script></body>
+<script type="text/javascript" src="../assets/javascripts/bundle5b0d9b4ad18cba15a5bd.js"></script></body>
 </html>
