--- a/public/index.html
+++ b/public/index.html
@@ -2,32 +2,32 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
-<meta name="description" content="トップのTTL_JP" />
+<meta name="description" content="Trust Tech Job" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" href="./assets/images/fav.png" />
 <!--facebook用-->
-<meta property="og:title" content="TTL_JP_TOP" />
-<meta property="og:description" content="トップのTTL_JP" />
+<meta property="og:title" content="フリーランスエンジニアの案件探しなら - Trust Tech Job" />
+<meta property="og:description" content="Trust Tech Job" />
 <meta property="og:url" content="" />
 <meta property="og:image" content="" /><!--絶対パスで記述-->
 <meta property="og:type" content="website" />
-<meta property="og:site_name" content="TTL_JP_TOP" />
+<meta property="og:site_name" content="フリーランスエンジニアの案件探しなら - Trust Tech Job" />
 <meta property="og:locale" content="ja_JP" />
 <!--twitter用-->
 <meta name="twitter:card" content="summary_large_image" /><!-- summary summary_large_image photo gallery appから選ぶ -->
 <!-- <meta name="twitter:site" content="" /> --><!--twitterがあれば記述-->
-<meta name="twitter:title" content="TTL_JP_TOP" />
+<meta name="twitter:title" content="フリーランスエンジニアの案件探しなら - Trust Tech Job" />
 <meta name="twitter:url" content="" />
-<meta name="twitter:description" content="トップのTTL_JP" />
+<meta name="twitter:description" content="Trust Tech Job" />
 <meta name="twitter:image" content="" /><!--絶対パスで記述-->
 <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet"> <!-- font -->
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
-<title>TTL_JP_TOP</title>
-<link href="assets/stylesheets/bundle5b0d9b4ad18cba15a5bd.css" rel="stylesheet"></head>
+<title>フリーランスエンジニアの案件探しなら - Trust Tech Job</title>
+<link href="assets/stylesheets/bundle45e432bb4ecdb560c439.css" rel="stylesheet"></head>
 <body ontouchstart="">
 
 
@@ -754,5 +754,5 @@
   <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
 </footer>
 
-<script type="text/javascript" src="assets/javascripts/bundle5b0d9b4ad18cba15a5bd.js"></script></body>
+<script type="text/javascript" src="assets/javascripts/bundle45e432bb4ecdb560c439.js"></script></body>
 </html>
