--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,17 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" href="./assets/images/fav.png" />
 <!--facebook用-->
-<meta property="og:title" content="フリーランスエンジニアの案件探しなら - Trust Tech Job" />
+<meta property="og:title" content="フリーランスエンジニア専門のエージェントなら - Trust Tech Job" />
 <meta property="og:description" content="Trust Tech Job" />
 <meta property="og:url" content="" />
 <meta property="og:image" content="" /><!--絶対パスで記述-->
 <meta property="og:type" content="website" />
-<meta property="og:site_name" content="フリーランスエンジニアの案件探しなら - Trust Tech Job" />
+<meta property="og:site_name" content="フリーランスエンジニア専門のエージェントなら - Trust Tech Job" />
 <meta property="og:locale" content="ja_JP" />
 <!--twitter用-->
 <meta name="twitter:card" content="summary_large_image" /><!-- summary summary_large_image photo gallery appから選ぶ -->
 <!-- <meta name="twitter:site" content="" /> --><!--twitterがあれば記述-->
-<meta name="twitter:title" content="フリーランスエンジニアの案件探しなら - Trust Tech Job" />
+<meta name="twitter:title" content="フリーランスエンジニア専門のエージェントなら - Trust Tech Job" />
 <meta name="twitter:url" content="" />
 <meta name="twitter:description" content="Trust Tech Job" />
 <meta name="twitter:image" content="" /><!--絶対パスで記述-->
@@ -26,8 +26,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
-<title>フリーランスエンジニアの案件探しなら - Trust Tech Job</title>
-<link href="assets/stylesheets/bundle45e432bb4ecdb560c439.css" rel="stylesheet"></head>
+<title>フリーランスエンジニア専門のエージェントなら - Trust Tech Job</title>
+<link href="assets/stylesheets/bundleeb89324e136c316b3da2.css" rel="stylesheet"></head>
 <body ontouchstart="">
 
 
@@ -40,7 +40,7 @@
         <div class="p-top-fixed__circle--LINE">
           <h3 class="p-top-fixed__catchPhrase"><span class="p-top-fixed__catchPhrase--bold">LINE</span>で<br>簡単登録</h3>
         </div><!-- /.p-top-fixed__circle -->
-        <img src="/assets/images/logo_ttj.png" class="p-top-fixed__titleImg" alt="トラストのロゴ">
+        <img src="/assets/images/logo_ttj.png" class="p-top-fixed__titleImg" alt="Trust Tech Job のロゴ">
         <div class="p-top-fixed__horizontal">
           <div class="p-top-fixed__circle--match">
             <h3 class="p-top-fixed__catchPhrase">希望案件<br>マッチ率<span class="p-top-fixed__catchPhrase--bold">97</span>％</h3>
@@ -701,7 +701,7 @@
 
   <div class="p-top-entry">
     <div class="p-top-entry__mask">
-      <img src="/assets/images/logo_ttj.png" class="p-top-entry__companyLogo" alt="サービス名のロゴ">
+      <img src="/assets/images/logo_ttj.png" class="p-top-entry__companyLogo" alt="サービス名:Trust Tech Jobのロゴ">
       <p class="p-top-entry__text">
         まずはお気軽に、<br><span class="p-top-entry__text--line">LINE</span><br>にてご登録下さい！
       </p>
@@ -754,5 +754,5 @@
   <small class="c-footerSP-company__copyright">&copy; 2020 Trust Inc. All Rights Reserved.</small>
 </footer>
 
-<script type="text/javascript" src="assets/javascripts/bundle45e432bb4ecdb560c439.js"></script></body>
+<script type="text/javascript" src="assets/javascripts/bundleeb89324e136c316b3da2.js"></script></body>
 </html>
